[fix] button spacing issue, adjusted margin and padding sizes for each container

--- a/public/css/sif.css
+++ b/public/css/sif.css
@@ -64,12 +64,13 @@
 /* Enclosing container */
 .gacha-container {
   height: 100%;
-  max-width: 480px;
+  max-width: 500px;
   margin: auto;
 }
 
 .card-spacing-container {
-  padding: 10px;
+  height: 480px;
+  padding: 5px;
   text-align: center;
 }
 
@@ -80,82 +81,83 @@
 
 /* Card default states */
 .aidoru-image-normal {
-  width: 325px;
-  height: 457.031px;
+  max-width: 100%;
+  height: 100%;
 }
 .aidoru-image-idolized {
-  width: 0;
+  max-width: 0;
   height: 0;
 }
 
 /* Normal card disappears */
 .normal-card-enter {
-  width: 325px;
-  height: 457.031px;
+  max-width: 100%;
+  height: 100%;
 }
 .normal-card-enter-active {
-  width: 0;
-  height: 457.031px;
-  transition: width 300ms ease-in-out;
-  -webkit-transition: width 300ms ease-in-out;
+  max-width: 0;
+  height: 100%;
+  transition: max-width 300ms ease-in-out;
+  -webkit-transition: max-width 300ms ease-in-out;
 }
 .normal-card-enter-done {
-  width: 0;
+  max-width: 0;
   height: 0;
 }
 
 /* Idolized card appears */
 .idolized_card-enter {
-  width: 0;
+  max-width: 0;
   height: 0;
 }
 .idolized-card-enter-active {
-  width: 325px;
-  height: 457.031px;
-  transition: width 300ms ease-in-out 300ms;
-  -webkit-transition: width 300ms ease-in-out 300ms;
+  max-width: 100%;
+  height: 100%;
+  transition: max-width 300ms ease-in-out 300ms;
+  -webkit-transition: max-width 300ms ease-in-out 300ms;
 }
 .idolized-card-enter-done {
-  width: 325px;
-  height: 457.031px;
+  max-width: 100%;
+  height: 100%;
 }
 
 /* Idolized card disappears */
 .idolized-card-exit {
-  width: 325px;
-  height: 457.031px;
+  max-width: 100%;
+  height: 100%;
 }
 .idolized-card-exit-active {
-  width: 0;
-  height: 457.031px;
-  transition: width 300ms ease-in-out;
-  -webkit-transition: width 300ms ease-in-out;
+  max-width: 0;
+  height: 100%;
+  transition: max-width 300ms ease-in-out;
+  -webkit-transition: max-width 300ms ease-in-out;
 }
 .idolized-card-exit-done {
-  width: 0;
+  max-width: 0;
   height: 0;
 }
 
 /* Normal card appears */
 .normal-card-exit {
-  width: 0;
+  max-width: 0;
   height: 0;
 }
 .normal-card-exit-active {
-  width: 325px;
-  height: 457.031px;
-  transition: width 300ms ease-in-out 300ms;
-  -webkit-transition: width 300ms ease-in-out 300ms;
+  max-width: 100%;
+  height: 100%;
+  transition: max-width 300ms ease-in-out 300ms;
+  -webkit-transition: max-width 300ms ease-in-out 300ms;
 }
 .normal-card-exit-done {
-  width: 325px;
-  height: 457.031px;
+  max-width: 100%;
+  height: 100%;
   text-align: center;
 }
 
 /* Gacha button styles and entering animation */
 .gacha-button {
   background-color: royalblue;
+  margin: 5px;
 }
 
 .gacha-button-container {
